kubernetes/security/pod_security_context.yaml
apiVersion: v1
kind: Pod
metadata:
  name: non-root-user-pod-demo
spec:
  securityContext:  
    runAsUser: 1001  
    runAsGroup: 1001
    runAsNonRoot: true
    fsGroup: 2000   
  volumes:
  - name: demo-volume
    emptyDir: {}
  containers:
  - name: non-root-user-demo
    image: demisto/iputils:1.0.0.62867
    command: [ "tail", "-f", "/dev/null" ]
    volumeMounts:
    - name: demo-volume
      mountPath: /data/demo
    securityContext:
      privileged: false
      readOnlyRootFilesystem: true  
      allowPrivilegeEscalation: false
      capabilities:
        drop:
          - ALL
